--- a/sass/module/_leaderboard.scss
+++ b/sass/module/_leaderboard.scss
@@ -3,6 +3,14 @@
 
 	&__title{
 		text-align: center;
+		font-weight: bold;
+		color: #313337;
+		font-size: 32px;
+		margin-bottom: 40px;
+
+		@include at-media-breakpoint(768px) {
+			text-align: left;
+		}
 	}
 
 	&__your-profile{
@@ -10,6 +18,11 @@
 	    max-width: 600px;
 	    margin: 0 auto;
 	    height: 230px;
+
+			@include at-media-breakpoint(768px) {
+				margin-left: 0;
+				margin-right: 0;
+			}
 
 		&__title{
 			color: white;
@@ -24,32 +37,42 @@
 	&__person{
 
 		height: 110px;
-	    /* display: flex; */
-	    width: 100%;
-	    background: white;
-	    max-width: 500px;
-	    position: relative;
-	    border: solid 1px #F0F5F8;
-	    margin: 45px auto;
-	    display: flex;
+    /* display: flex; */
+    width: 100%;
+    background: white;
+    max-width: 400px;
+    position: relative;
+    margin: 0 auto;
+		margin-bottom: 52px;
+    display: block;
+
+		@include at-media-breakpoint(768px) {
+			margin-left: 0;
+			margin-right: 52px;
+			display: inline-block;
+		}
+
+			&::after {
+				content: " ";
+				display: block;
+				margin-top: 32px;
+				height: 1px;
+				width: 100%;
+				background-color: #C7D7E5;
+			}
 
     	&__image-group{
-    		width: 30%;
+    		width: 108px;
     		background-color: #F0F5F8;
+				display: inline-block;
+				vertical-align: top;
 
     		& img{
 			    vertical-align: top;
 			    /* max-width: 100%; */
-			    width: 70px;
-    			height: 70px;
-			    min-width: 54px;
-			    border-radius: 100%;
-			    max-width: 70px;
-			    max-height: 70px;
-			    min-width: 50px;
-			    min-height: 50px;
+			    width: 100%;
+    			height: 100%;
 			    display: block;
-			    margin: 8px auto 2px auto;
     		}
 
     		& p{
@@ -66,40 +89,53 @@
 
     	&__text-group{
     		margin-left: 20px;
+				display: inline-block;
 
     		&__name{
     			font-size: 18px;
-			    font-weight: normal;
-			    margin: 30px auto 0px 0;
-			    color: #2D2D2D;
+			    font-weight: 600;
+			    margin: 5px auto 0px 0;
+			    color: #0078BC;
     		}
 
     		&__job{
-    			color: #979797;
-			    font-size: 10px;
+    			color: #515864;
+			    font-size: 14px;
 			    font-weight: normal;
+					margin-top: 5px;
+					letter-spacing: -0.4px;
     		}
+
+				&__stats-group {
+					position: absolute;
+					bottom: 3px;
+
+					&__place{
+						font-size: 14px;
+				    font-weight: bold;
+						color: #414141;
+						padding: 0px 8px;
+						border-radius: 20px;
+						border: 1px solid #414141;
+						display: inline-block;
+						vertical-align: top;
+						margin-right: 5px;
+			    }
+
+					&__amount{
+						font-size: 14px;
+				    font-weight: bold;
+						color: white;
+						background-color: #31C17B;
+						border: 1px solid #31C17B;
+						padding: 0px 8px;
+						border-radius: 20px;
+						display: inline-block;
+						vertical-align: top;
+			    }
+				}
     	}
 
-
-    	&__price-tag{
-		   	position: absolute;
-		    top: -15px;
-		    right: -15px;
-		    background-color: #31C17B;
-		    color: white;
-		    padding: 5px 10px;
-
-		    &__dollar{
-				font-size: 18px;
-			    font-weight: bold;
-		    }
-
-			&__amount{
-				font-size: 14px;
-    			font-weight: 400;
-			}
-    	}
 
     	&__profile-link{
     		position: absolute;
