--- a/sass/module/_site-header.scss
+++ b/sass/module/_site-header.scss
@@ -3,39 +3,39 @@ $header-text-color: black;
 .site-header{
 	//background-color:$lve-blue;
 	background-color: white;
-	color:$header-text-color; 
+	color:$header-text-color;
 	padding: 0;
 	display: block;
 	margin:0 auto;
-	transition: background-color .3s ease-out;  
+	transition: background-color .3s ease-out;
 	height: 60px;
-	
+
 	position: fixed;
 	top:0;
-	width:100%; 
-	min-width: 318px; 
-	z-index: 10;  
-	
+	width:100%;
+	min-width: 318px;
+	z-index: 10;
+
 	border-bottom: 1px solid #e1e2e3;
 	// -webkit-margin-before-collapse: separate;
 	// -webkit-box-shadow: rgba(0,0,0,0.15) 0 6px 10px;
- //    box-shadow: rgba(0,0,0,0.08) 0 6px 10px; 
+ //    box-shadow: rgba(0,0,0,0.08) 0 6px 10px;
     //-------------------------------------------------------------------------
 
     &__nav{
     		display: flex;
-    		justify-content: space-between; 
+    		justify-content: space-between;
     }
-    
+
     &__logo{
     	display: block;
-    	color: $header-text-color; 
+    	color: $header-text-color;
     	text-decoration: none;
     	text-transform: uppercase;
     	text-align: center;
     	font-size: 18px;
     	font-weight: bolder;
-    	line-height: 21px; 
+    	line-height: 21px;
     	letter-spacing: .5px;
     	vertical-align: -webkit-baseline-middle;
 	    vertical-align: middle;
@@ -44,22 +44,26 @@ $header-text-color: black;
    		margin: 0px auto 0 auto;
    		max-width: 175px;
 
+			@include at-media-breakpoint(768px) {
+				margin: 0;
+			}
+
    		&:hover{
-   			color:$lve-blue; 
+   			color:$lve-blue;
    		}
 
    		& img{
-   			max-height: 45px; 
+   			max-height: 45px;
    			min-width: 140px;
    		}
-	    
+
     }
 
     &__main-menu{
-    	
+
     	padding: 5px 0 0px 0;
     	text-align: center;
-    	max-height: 60px; 
+    	max-height: 60px;
   		display: flex;
     	justify-content: space-between;
     	align-items: center;
@@ -68,7 +72,7 @@ $header-text-color: black;
     	&__links{
     		display: block;
     		vertical-align: middle;
-		
+
 		    vertical-align: baseline;
 		    -ms-touch-action: manipulation;
 		    touch-action: manipulation;
@@ -101,33 +105,31 @@ $header-text-color: black;
     			font-variant: small-caps;
 
 			   	padding:0px;
-		    	margin: 0px 15px;
+		    	margin: 0;
    			}
 
    			&--img img{
    				max-width:40px;
    				max-height: 40px;
    				vertical-align: text-top;
-   				border-radius: 100%; 
+   				border-radius: 100%;
    			}
 
     	}
     }
 
-    
+
     &__menu-icon{
     	display: block;
 		width:30px;
 		height: 19px;
 		/*background-color: #FFF;*/
 		position: absolute;
-		z-index: 10; 
+		z-index: 10;
 		top: 21px;
-		left: 25px;
-		left: 5%;
 
-		@include at-media-breakpoint(940px) {
-			//display: none; 
+		@include at-media-breakpoint(768px) {
+			display: none;
 		}
 
 		&::before {
@@ -138,7 +140,7 @@ $header-text-color: black;
 			width:30px;
 			height: 3px;
 			background-color: $header-text-color;
-			transform-origin: 10% 0; 
+			transform-origin: 10% 0;
 			transition: transform .3s ease-out;
 		}
 
@@ -150,18 +152,18 @@ $header-text-color: black;
 			height: 3px;
 			background-color: $header-text-color;
 			transition: all .3s ease-out;
-			transform-origin: 0 50%; 
+			transform-origin: 0 50%;
 		}
 
 		&::after{
-			content: ""; 
+			content: "";
 			position:absolute;
 			bottom:0;
 			left:0;
 			width:30px;
 			height: 3px;
 			background-color: $header-text-color;
-			transform-origin: 0 100%; 
+			transform-origin: 0 100%;
 			transition: transform .3s ease-out;
 		}
 
