--- a/css/main.css
+++ b/css/main.css
@@ -542,18 +542,26 @@ a {
       .site-header__main-menu__links--text {
         color: black;
         text-decoration: none;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 600;
         line-height: 18px;
-        letter-spacing: -0.7px;
+        letter-spacing: 1px;
         min-height: 0px;
         text-align: center;
         text-transform: uppercase;
         font-weight: bold;
         text-transform: lowercase;
         font-variant: small-caps;
-        padding: 0px;
-        margin: 0; }
+        padding: 8px 20px;
+        margin: 0;
+        margin-left: 10px;
+        margin-right: 10px;
+        border-radius: 4px;
+        border: 2px solid #414141; }
+        .site-header__main-menu__links--text:first-child {
+          background-color: #ec3f35;
+          border: 2px solid #ec3f35;
+          color: #fff; }
       .site-header__main-menu__links--img img {
         max-width: 40px;
         max-height: 40px;
@@ -748,8 +756,15 @@ a {
     font-size: 16px;
     line-height: 25px;
     color: #f2f4f5;
-    margin: 10px 0 20px;
+    margin: 10px 0 32px;
     font-weight: 500; }
+  .visual-lead__btn {
+    background-color: #ffffff;
+    color: #313337;
+    padding: 12px 80px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase; }
 
 .seperator__short {
   width: 90px;
@@ -801,21 +816,12 @@ a {
     .leaderboard__title {
       text-align: left; } }
 .leaderboard__your-profile {
-  background: #4B4B4B;
-  max-width: 600px;
-  margin: 0 auto;
-  height: 230px; }
+  background: red;
+  margin: 0 auto; }
   @media (min-width: 768px) {
     .leaderboard__your-profile {
       margin-left: 0;
       margin-right: 0; } }
-  .leaderboard__your-profile__title {
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-left: 50px;
-    position: relative;
-    top: 30px; }
 .leaderboard__person {
   height: 110px;
   /* display: flex; */
@@ -906,6 +912,20 @@ a {
     font-size: 10px; }
     .leaderboard__person__profile-link img {
       vertical-align: middle; }
+.leaderboard__dots {
+  margin: 12px;
+  margin-bottom: 55px; }
+  .leaderboard__dots__single {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #8b909c;
+    margin-bottom: 5px;
+    margin-left: 0px; }
+    .leaderboard__dots__single:nth-of-type(2n) {
+      width: 8px;
+      height: 8px;
+      margin-left: 2px; }
 
 .body__side-menu {
   display: inherit !important;
