--- a/sass/module/_site-header.scss
+++ b/sass/module/_site-header.scss
@@ -92,20 +92,28 @@ $header-text-color: black;
    			&--text{
    				color:$header-text-color;
 	    		text-decoration: none;
-	    		font-size: 14px;
+	    		font-size: 16px;
 	    		font-weight: 600;
 	    		line-height: 18px;
-	    		letter-spacing: -0.7px;
-
+	    		letter-spacing: 1px;
 	    		min-height: 0px;
 	    		text-align: center;
 			    text-transform: uppercase;
 			    font-weight: bold;
 			    text-transform: lowercase;
     			font-variant: small-caps;
-
-			   	padding:0px;
+			   	padding:8px 20px;
 		    	margin: 0;
+					margin-left: 10px;
+					margin-right: 10px;
+					border-radius: 4px;
+					border: 2px solid #414141;
+
+					&:first-child {
+						background-color: #ec3f35;
+						border: 2px solid #ec3f35;
+						color: #fff;
+					}
    			}
 
    			&--img img{
