--- a/sass/module/_visual-lead.scss
+++ b/sass/module/_visual-lead.scss
@@ -59,8 +59,17 @@
 	    font-size: 16px;
 	    line-height: 25px;
 	    color: #f2f4f5;
-	    margin: 10px 0 20px;
+	    margin: 10px 0 32px;
 	    font-weight: 500;
+	}
+
+	&__btn{
+	    background-color: #ffffff;
+			color: #313337;
+			padding: 12px 80px;
+			font-size: 16px;
+			font-weight: bold;
+			text-transform: uppercase;
 	}
 
 
