--- a/css/main.css
+++ b/css/main.css
@@ -1261,6 +1261,29 @@ a {
   font-size: 32px;
   background-color: white; }
 
+.bootstrap-form__login {
+  width: 100%;
+  max-width: 500px;
+  margin: 30px auto;
+  background-color: white;
+  border-radius: 5px;
+  background-clip: padding-box;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.07); }
+  .bootstrap-form__login form {
+    background-color: white;
+    border-radius: 5px;
+    background-clip: padding-box;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.07);
+    border: 1px solid transparent;
+    padding: 15px; }
+  .bootstrap-form__login .at-title h3 {
+    text-align: center;
+    padding: 20px 0px;
+    text-transform: uppercase; }
+  .bootstrap-form__login .at-signup-link p {
+    text-align: center;
+    padding: 25px 0px; }
+
 .show-me {
   display: block; }
 
