leaderboard and mobile menu tweaks

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,6 +25,10 @@ a{
    	touch-action: manipulation;
    	-ms-touch-action: manipulation;
 	&:hover{
-		color:$base-hover-color;  
+		color:$base-hover-color;
 	}
+}
+
+a:hover {
+  text-decoration: none;
 }
