--- a/css/main.css
+++ b/css/main.css
@@ -464,6 +464,9 @@ a {
   a:hover {
     color: black; }
 
+a:hover {
+  text-decoration: none; }
+
 .wrapper {
   margin: 0 auto;
   padding: 0px 2rem;
@@ -524,9 +527,12 @@ a {
     padding: 5px 0 0px 0;
     text-align: center;
     max-height: 60px;
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center; }
+    @media (min-width: 768px) {
+      .site-header__main-menu {
+        display: flex; } }
     .site-header__main-menu__links {
       display: block;
       vertical-align: middle;
@@ -765,6 +771,10 @@ a {
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase; }
+    .visual-lead__btn:hover {
+      background-color: #f0f0f0;
+      color: #313337;
+      border: 3px solid #f0f0f0; }
 
 .seperator__short {
   width: 90px;
@@ -806,6 +816,8 @@ a {
     font-size: 12px;
     color: #7E7E7E; }
 
+.leaderboard__inner-wrap {
+  display: inline-block; }
 .leaderboard__title {
   text-align: center;
   font-weight: bold;
@@ -827,7 +839,7 @@ a {
   /* display: flex; */
   width: 100%;
   background: white;
-  max-width: 400px;
+  max-width: 360px;
   position: relative;
   margin: 0 auto;
   margin-bottom: 52px;
@@ -840,7 +852,7 @@ a {
   .leaderboard__person::after {
     content: " ";
     display: block;
-    margin-top: 32px;
+    margin-top: 26px;
     height: 1px;
     width: 100%;
     background-color: #C7D7E5; }
@@ -854,7 +866,9 @@ a {
       /* max-width: 100%; */
       width: 100%;
       height: 100%;
-      display: block; }
+      display: block;
+      border: 2px solid #27292b;
+      border-radius: 2px; }
     .leaderboard__person__image-group p {
       text-align: center;
       color: #414141;
@@ -913,8 +927,10 @@ a {
     .leaderboard__person__profile-link img {
       vertical-align: middle; }
 .leaderboard__dots {
-  margin: 12px;
-  margin-bottom: 55px; }
+  margin: 0 auto;
+  margin-top: 12px;
+  margin-bottom: 55px;
+  width: 12px; }
   .leaderboard__dots__single {
     width: 12px;
     height: 12px;
@@ -922,7 +938,7 @@ a {
     background-color: #8b909c;
     margin-bottom: 5px;
     margin-left: 0px; }
-    .leaderboard__dots__single:nth-of-type(2n) {
+    .leaderboard__dots__single:nth-of-type(2), .leaderboard__dots__single:nth-of-type(3) {
       width: 8px;
       height: 8px;
       margin-left: 2px; }
@@ -960,15 +976,15 @@ a {
     -webkit-transform: translateX(90%); }
 
 .side-menu {
-  width: 90%;
+  width: 100%;
   display: block;
   color: white;
-  padding-top: 50px; }
+  padding-top: 85px; }
   .side-menu__item {
     display: block;
     color: white;
     font-size: 16px;
-    padding: 0.5em 1.5em;
+    padding: 0.8em 1.5em;
     vertical-align: middle;
     min-height: 0px;
     text-decoration: none; }
