--- a/sass/module/_leaderboard.scss
+++ b/sass/module/_leaderboard.scss
@@ -1,5 +1,8 @@
 .leaderboard{
 
+	&__inner-wrap {
+		display: inline-block;
+	}
 
 	&__title{
 		text-align: center;
@@ -29,7 +32,7 @@
     /* display: flex; */
     width: 100%;
     background: white;
-    max-width: 400px;
+    max-width: 360px;
     position: relative;
     margin: 0 auto;
 		margin-bottom: 52px;
@@ -44,7 +47,7 @@
 			&::after {
 				content: " ";
 				display: block;
-				margin-top: 32px;
+				margin-top: 26px;
 				height: 1px;
 				width: 100%;
 				background-color: #C7D7E5;
@@ -62,6 +65,8 @@
 			    width: 100%;
     			height: 100%;
 			    display: block;
+					border: 2px solid #27292b;
+					border-radius: 2px;
     		}
 
     		& p{
@@ -145,8 +150,10 @@
 	}
 
 	&__dots {
-		margin: 12px;
+		margin: 0 auto;
+		margin-top: 12px;
 		margin-bottom: 55px;
+		width: 12px;
 
 		&__single {
 			width: 12px;
@@ -156,7 +163,7 @@
 			margin-bottom: 5px;
 			margin-left: 0px;
 
-			&:nth-of-type(2n){
+			&:nth-of-type(2), &:nth-of-type(3){
 				width: 8px;
 				height: 8px;
 				margin-left: 2px;
