--- a/sass/module/_site-header.scss
+++ b/sass/module/_site-header.scss
@@ -64,9 +64,13 @@ $header-text-color: black;
     	padding: 5px 0 0px 0;
     	text-align: center;
     	max-height: 60px;
-  		display: flex;
+  		display: none;
     	justify-content: space-between;
     	align-items: center;
+
+			@include at-media-breakpoint(768px) {
+				display: flex;
+			}
 
 
     	&__links{
