--- a/sass/module/_visual-lead.scss
+++ b/sass/module/_visual-lead.scss
@@ -70,6 +70,12 @@
 			font-size: 16px;
 			font-weight: bold;
 			text-transform: uppercase;
+
+			&:hover {
+				background-color: rgb(240,240,240);
+				color: #313337;
+				border: 3px solid rgb(240,240,240);
+			}
 	}
 
 
