--- a/css/main.css
+++ b/css/main.css
@@ -835,27 +835,23 @@ a:hover {
       margin-left: 0;
       margin-right: 0; } }
 .leaderboard__person {
-  height: 110px;
+  height: 142px;
   /* display: flex; */
   width: 100%;
   background: white;
-  max-width: 360px;
   position: relative;
   margin: 0 auto;
-  margin-bottom: 52px;
-  display: block; }
+  margin-bottom: 26px;
+  display: block;
+  border-bottom: 1px solid #C7D7E5;
+  padding-bottom: 26px; }
   @media (min-width: 768px) {
     .leaderboard__person {
       margin-left: 0;
-      margin-right: 52px;
-      display: inline-block; } }
-  .leaderboard__person::after {
-    content: " ";
-    display: block;
-    margin-top: 26px;
-    height: 1px;
-    width: 100%;
-    background-color: #C7D7E5; }
+      padding-right: 52px;
+      margin-right: -4px;
+      display: inline-block;
+      max-width: 410px; } }
   .leaderboard__person__image-group {
     width: 108px;
     background-color: #F0F5F8;
@@ -892,7 +888,7 @@ a:hover {
       letter-spacing: -0.4px; }
     .leaderboard__person__text-group__stats-group {
       position: absolute;
-      bottom: 3px; }
+      bottom: 35px; }
       .leaderboard__person__text-group__stats-group__place {
         font-size: 14px;
         font-weight: bold;
@@ -930,7 +926,13 @@ a:hover {
   margin: 0 auto;
   margin-top: 12px;
   margin-bottom: 55px;
-  width: 12px; }
+  width: 12px;
+  position: relative; }
+  @media (min-width: 768px) {
+    .leaderboard__dots {
+      margin-left: 0;
+      margin-right: 0;
+      left: 386px; } }
   .leaderboard__dots__single {
     width: 12px;
     height: 12px;
