finished login page

--- a/css/main.css
+++ b/css/main.css
@@ -638,6 +638,9 @@ a:hover {
   .page-section--brown {
     background-color: #221e20;
     color: white; }
+  .page-section--gray {
+    background-color: #f8f8f8;
+    color: black; }
   .page-section__section-title {
     text-transform: uppercase;
     font-size: 35px;
@@ -1281,19 +1284,23 @@ a:hover {
 
 .bootstrap-form__login {
   width: 100%;
-  max-width: 500px;
+  max-width: 450px;
   margin: 30px auto;
+  padding: 20px;
   background-color: white;
+  color: #686868;
   border-radius: 5px;
   background-clip: padding-box;
   border-bottom: 2px solid rgba(0, 0, 0, 0.07); }
-  .bootstrap-form__login form {
+  .bootstrap-form__login .at-form {
     background-color: white;
     border-radius: 5px;
     background-clip: padding-box;
     border-bottom: 2px solid rgba(0, 0, 0, 0.07);
     border: 1px solid transparent;
-    padding: 15px; }
+    max-width: 320px;
+    margin-right: auto;
+    margin-left: auto; }
   .bootstrap-form__login .at-title h3 {
     text-align: center;
     padding: 20px 0px;
@@ -1301,6 +1308,30 @@ a:hover {
   .bootstrap-form__login .at-signup-link p {
     text-align: center;
     padding: 25px 0px; }
+  .bootstrap-form__login fieldset {
+    border: none; }
+  .bootstrap-form__login label {
+    font-weight: 400;
+    color: #686868;
+    margin-bottom: 5px; }
+  .bootstrap-form__login input {
+    box-shadow: none;
+    height: 42px;
+    font-size: 16px;
+    line-height: 1.5;
+    border: 1px solid #d4d9d9;
+    border-radius: 3px; }
+  .bootstrap-form__login button {
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    border: solid 3px black;
+    margin-top: 30px; }
+    .bootstrap-form__login button:hover {
+      background-color: white;
+      color: black;
+      text-transform: uppercase;
+      border: solid 3px black; }
 
 .show-me {
   display: block; }
