--- a/sass/module/_bootstrap-form.scss
+++ b/sass/module/_bootstrap-form.scss
@@ -4,21 +4,25 @@
 
 .bootstrap-form__login{
 	width: 100%;
-	max-width: 500px;
+	max-width: 450px;
 	margin: 30px auto; 
+	padding:20px; 
 	background-color: white;
+	color: #686868;
     border-radius: 5px;
     background-clip: padding-box;
     border-bottom: 2px solid rgba(0,0,0,0.07);
 
 
-    & form{
+    & .at-form{
     	background-color: white;
     	border-radius: 5px;
     	background-clip: padding-box;
     	border-bottom: 2px solid rgba(0,0,0,0.07);
     	border: 1px solid transparent;
-    	padding: 15px; 
+    	max-width: 320px;
+	    margin-right: auto;
+	    margin-left: auto;
     }
 
 	& .at-title h3{
@@ -31,4 +35,39 @@
 		text-align: center;
     	padding: 25px 0px;
 	}
+
+	& fieldset{
+		border: none; 
+	}
+
+	& label{
+		font-weight: 400;
+    	color: #686868;
+    	margin-bottom: 5px;
+	}
+
+	& input{
+		box-shadow: none;
+	    height: 42px;
+	    font-size: 16px;
+	    line-height: 1.5;
+	    border: 1px solid #d4d9d9;
+	    border-radius: 3px;
+	}
+
+	& button{
+		background-color: black;
+	    color: white;
+	    text-transform: uppercase;
+	    border: solid 3px black;
+	    margin-top: 30px;
+
+	    &:hover{
+	    	background-color: white;
+		    color: black;
+		    text-transform: uppercase;
+		    border: solid 3px black;
+	    }
+	}
+
 }
