--- a/sass/module/_page-section.scss
+++ b/sass/module/_page-section.scss
@@ -37,6 +37,11 @@
 		color:white;
 	}
 
+	&--gray{
+		background-color: #f8f8f8;
+		color: black; 
+	}
+
 
 	&__section-title{
 		//text-transform: uppercase;
