--- a/css/main.css
+++ b/css/main.css
@@ -495,7 +495,7 @@ a:hover {
   top: 0;
   width: 100%;
   min-width: 318px;
-  z-index: 10;
+  z-index: 100;
   border-bottom: 1px solid #e1e2e3; }
   .site-header__nav {
     display: flex;
@@ -533,6 +533,27 @@ a:hover {
     @media (min-width: 768px) {
       .site-header__main-menu {
         display: flex; } }
+    .site-header__main-menu .dropdown-menu li a {
+      line-height: 40px; }
+    .site-header__main-menu .dropdown-menu li button {
+      display: block;
+      padding: 3px 20px;
+      clear: both;
+      font-weight: normal;
+      line-height: 1.42857143;
+      color: #333;
+      white-space: nowrap;
+      width: 100%;
+      text-align: left;
+      text-transform: none;
+      font-variant: none;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      line-height: 40px; }
+      .site-header__main-menu .dropdown-menu li button:hover {
+        color: #262626 !important;
+        text-decoration: none;
+        background-color: #f5f5f5 !important; }
     .site-header__main-menu__links {
       display: block;
       vertical-align: middle;
@@ -567,7 +588,10 @@ a:hover {
         .site-header__main-menu__links--text:first-child {
           background-color: #ec3f35;
           border: 2px solid #ec3f35;
-          color: #fff; }
+          color: #fff;
+          border-radius: 0px; }
+          .site-header__main-menu__links--text:first-child:hover {
+            color: black; }
       .site-header__main-menu__links--img img {
         max-width: 40px;
         max-height: 40px;
@@ -679,10 +703,12 @@ a:hover {
     margin-top: 11px;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 1em; }
+    font-size: 1em;
+    border-radius: 0px; }
     .btn--gv-red:hover {
-      color: white;
-      background-color: black; }
+      color: black;
+      background-color: white;
+      border: solid 3px white; }
   .btn--connect-form {
     background-color: black;
     color: white;
@@ -740,7 +766,7 @@ a:hover {
       flex-direction: row-reverse;
       justify-content: space-between; }
     .visual-lead iframe {
-      min-height: 420px; }
+      min-height: 450px; }
     .visual-lead .visual-lead__text-group {
       padding-right: 30px;
       width: 70%; } }
@@ -767,6 +793,10 @@ a:hover {
     color: #f2f4f5;
     margin: 10px 0 32px;
     font-weight: 500; }
+    .visual-lead__description a {
+      color: #5CAFFD; }
+      .visual-lead__description a:hover {
+        color: #c6c6c6; }
   .visual-lead__btn {
     background-color: #ffffff;
     color: #313337;
@@ -804,7 +834,7 @@ a:hover {
     color: inherit; }
     .site-footer a:hover {
       color: white; }
-  .site-footer__mike {
+  .site-footer__name {
     padding-top: 25px;
     text-transform: uppercase;
     font-size: 20px;
@@ -819,55 +849,57 @@ a:hover {
     font-size: 12px;
     color: #7E7E7E; }
 
-.leaderboard__inner-wrap {
-  display: inline-block; }
 .leaderboard__title {
-  text-align: center;
-  font-weight: bold;
-  color: #313337;
-  font-size: 32px;
-  margin-bottom: 40px; }
-  @media (min-width: 768px) {
-    .leaderboard__title {
-      text-align: left; } }
+  text-align: center; }
 .leaderboard__your-profile {
-  background: red;
-  margin: 0 auto; }
-  @media (min-width: 768px) {
-    .leaderboard__your-profile {
-      margin-left: 0;
-      margin-right: 0; } }
+  background: #4B4B4B;
+  max-width: 600px;
+  margin: 0 auto;
+  height: 230px; }
+  .leaderboard__your-profile__title {
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-left: 50px;
+    position: relative;
+    top: 30px; }
 .leaderboard__person {
-  height: 142px;
+  height: 110px;
   /* display: flex; */
   width: 100%;
   background: white;
+  max-width: 500px;
   position: relative;
-  margin: 0 auto;
-  margin-bottom: 26px;
-  display: block;
-  border-bottom: 1px solid #C7D7E5;
-  padding-bottom: 26px; }
-  @media (min-width: 768px) {
-    .leaderboard__person {
-      margin-left: 0;
-      padding-right: 52px;
-      margin-right: -4px;
-      display: inline-block;
-      max-width: 410px; } }
+  border: solid 1px #F0F5F8;
+  margin: 45px auto;
+  display: flex;
+  z-index: 5;
+  position: relative; }
+  .leaderboard__person__rank {
+    border: solid 2px #414141;
+    border-radius: 17px;
+    color: #414141;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    font-weight: bold;
+    padding: 0px 10px; }
   .leaderboard__person__image-group {
-    width: 108px;
+    width: 30%;
     background-color: #F0F5F8;
-    display: inline-block;
-    vertical-align: top; }
+    max-width: 108px;
+    min-width: 108px; }
     .leaderboard__person__image-group img {
       vertical-align: top;
       /* max-width: 100%; */
-      width: 100%;
-      height: 100%;
-      display: block;
-      border: 2px solid #27292b;
-      border-radius: 2px; }
+      width: 108px;
+      height: 108px;
+      border-radius: 0px;
+      max-width: 108px;
+      max-height: 108px;
+      min-width: 108px;
+      min-height: 108px;
+      display: block; }
     .leaderboard__person__image-group p {
       text-align: center;
       color: #414141;
@@ -876,42 +908,58 @@ a:hover {
       padding-bottom: 5px;
       /* Temporary Sytle until images added */ }
   .leaderboard__person__text-group {
-    margin-left: 20px;
-    display: inline-block; }
+    margin-left: 20px; }
     .leaderboard__person__text-group__name {
-      font-size: 18px;
-      font-weight: 600;
-      margin: 5px auto 0px 0;
-      color: #0078BC; }
+      font-size: 16px;
+      font-weight: bold;
+      margin: 30px auto 5px 0;
+      color: #5CAFFD; }
+      .leaderboard__person__text-group__name a {
+        color: #5CAFFD; }
+        .leaderboard__person__text-group__name a:hover {
+          color: #2D2D2D;
+          text-decoration: underline; }
     .leaderboard__person__text-group__job {
-      color: #515864;
+      color: #979797;
+      font-size: 11px;
+      font-weight: normal; }
+  .leaderboard__person__price-tag {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    background-color: #31C17B;
+    color: white;
+    padding: 5px 10px;
+    z-index: 10;
+    min-width: 100px; }
+    .leaderboard__person__price-tag__dollar {
+      font-size: 18px;
+      font-weight: bold; }
+    .leaderboard__person__price-tag__amount {
       font-size: 14px;
-      font-weight: normal;
-      margin-top: 5px;
-      letter-spacing: -0.4px; }
-    .leaderboard__person__text-group__stats-group {
-      position: absolute;
-      bottom: 35px; }
-      .leaderboard__person__text-group__stats-group__place {
-        font-size: 14px;
-        font-weight: bold;
-        color: #414141;
-        padding: 0px 8px;
-        border-radius: 20px;
-        border: 1px solid #414141;
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 5px; }
-      .leaderboard__person__text-group__stats-group__amount {
-        font-size: 14px;
-        font-weight: bold;
-        color: white;
-        background-color: #31C17B;
-        border: 1px solid #31C17B;
-        padding: 0px 8px;
-        border-radius: 20px;
-        display: inline-block;
-        vertical-align: top; }
+      font-weight: 400; }
+  .leaderboard__person__price-tag-flap {
+    position: absolute;
+    top: 10px;
+    right: -11px;
+    background-color: #29A468;
+    color: white;
+    height: 20px;
+    width: 20px;
+    transform: rotate(45deg);
+    z-index: -10;
+    z-index: 5; }
+  .leaderboard__person__price-tag-flap--coverup {
+    position: absolute;
+    top: 4px;
+    right: -1px;
+    background-color: #ffffff;
+    border-right: solid 1px #f0f5f8;
+    color: white;
+    height: 30px;
+    width: 15px;
+    z-index: -10;
+    z-index: 6; }
   .leaderboard__person__profile-link {
     position: absolute;
     bottom: 5px;
@@ -925,28 +973,6 @@ a:hover {
     font-size: 10px; }
     .leaderboard__person__profile-link img {
       vertical-align: middle; }
-.leaderboard__dots {
-  margin: 0 auto;
-  margin-top: 12px;
-  margin-bottom: 55px;
-  width: 12px;
-  position: relative; }
-  @media (min-width: 768px) {
-    .leaderboard__dots {
-      margin-left: 0;
-      margin-right: 0;
-      left: 386px; } }
-  .leaderboard__dots__single {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #8b909c;
-    margin-bottom: 5px;
-    margin-left: 0px; }
-    .leaderboard__dots__single:nth-of-type(2), .leaderboard__dots__single:nth-of-type(3) {
-      width: 8px;
-      height: 8px;
-      margin-left: 2px; }
 
 .body__side-menu {
   display: inherit !important;
@@ -984,7 +1010,7 @@ a:hover {
   width: 100%;
   display: block;
   color: white;
-  padding-top: 85px; }
+  padding-top: 25px; }
   .side-menu__item {
     display: block;
     color: white;
@@ -997,6 +1023,23 @@ a:hover {
       background: #676666;
       color: white;
       text-decoration: none; }
+    .side-menu__item button {
+      background: none;
+      border: none;
+      min-height: 0px;
+      display: block;
+      color: white;
+      font-size: 16px;
+      vertical-align: middle;
+      min-height: 0px;
+      text-decoration: none;
+      width: 100%;
+      text-align: left;
+      padding: 0px;
+      margin: 0px; }
+      .side-menu__item button:hover {
+        background-color: transparent;
+        border: none; }
   .side-menu__btn {
     margin: 2em 0;
     border: 2px solid #fff !important;
@@ -1007,9 +1050,11 @@ a:hover {
     padding: 0.6em 1.8em;
     display: inline-block;
     font-weight: bold;
-    margin-left: 1.5em; }
+    margin-left: 1.5em;
+    text-transform: uppercase; }
     .side-menu__btn:hover {
-      color: #676666; }
+      color: #676666;
+      color: white; }
   .side-menu__close-btn {
     position: absolute;
     top: 12px;
@@ -1035,6 +1080,35 @@ a:hover {
   padding: 20px 0;
   text-transform: uppercase;
   text-decoration: underline; }
+.gv-modal__update-profile .modal-subtitle {
+  text-align: Center;
+  padding: 20px 0;
+  text-transform: uppercase;
+  text-decoration: none; }
+.gv-modal__update-profile .dashboard__profile-img-group button {
+  background-color: #31c17b;
+  border: solid 3px #31c17b;
+  color: white;
+  padding: 15px 15px;
+  margin-top: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1em;
+  width: 100%;
+  border-radius: 0;
+  margin-left: auto;
+  max-width: 300px;
+  margin-right: auto;
+  display: block; }
+.gv-modal__update-profile .dashboard__profile-img-group p {
+  width: 130px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  background: black;
+  line-height: 22px;
+  margin: 25px auto;
+  font-weight: bolder; }
 
 .gv-modal__add-item .modal-content {
   border-radius: 0px; }
