--- a/sass/module/_module.scss
+++ b/sass/module/_module.scss
@@ -10,7 +10,8 @@
 @import "visual-lead"; 
 @import "seperator"; 
 @import "site-footer"; 
-@import "leaderboard"; 
+//@import "leaderboard"; 
+@import "leaderboard--old";
 @import "body"; 
 @import "side-menu";
 @import "gv-modal";
