--- a/sass/module/_site-header.scss
+++ b/sass/module/_site-header.scss
@@ -14,7 +14,7 @@ $header-text-color: black;
 	top:0;
 	width:100%;
 	min-width: 318px;
-	z-index: 10;
+	z-index: 100;
 
 	border-bottom: 1px solid #e1e2e3;
 	// -webkit-margin-before-collapse: separate;
@@ -68,10 +68,37 @@ $header-text-color: black;
     	justify-content: space-between;
     	align-items: center;
 
-			@include at-media-breakpoint(768px) {
-				display: flex;
-			}
+		@include at-media-breakpoint(768px) {
+			display: flex;
+		}
 
+
+		& .dropdown-menu li a{
+			line-height: 40px;
+		}	
+
+		& .dropdown-menu li button{
+			display: block;
+		    padding: 3px 20px;
+		    clear: both;
+		    font-weight: normal;
+		    line-height: 1.42857143;
+		    color: #333;
+		    white-space: nowrap;
+		    width: 100%;
+		    text-align: left;
+		    text-transform: none;
+		    font-variant: none;
+		    margin-top: 0px;
+		    margin-bottom: 0px;
+		    line-height: 40px;
+
+		    &:hover{
+		    	color: #262626 !important;
+			    text-decoration: none;
+			    background-color: #f5f5f5 !important;
+		    }
+		}
 
     	&__links{
     		display: block;
@@ -117,6 +144,11 @@ $header-text-color: black;
 						background-color: #ec3f35;
 						border: 2px solid #ec3f35;
 						color: #fff;
+						border-radius: 0px;
+
+						&:hover{
+							color: black;
+						}
 					}
    			}
 
