--- a/sass/module/_side-menu.scss
+++ b/sass/module/_side-menu.scss
@@ -14,7 +14,7 @@
 	    min-height: 0px;
 	    text-decoration: none;
 		&:hover{
-			background: #676666;
+			background: #393b3c;
 			color: white;
 			text-decoration: none;
 		}
@@ -47,18 +47,18 @@
 		margin: 2em 0;
 	    border: 2px solid #fff !important;
 	    color: #fff;
-	    background: none !important;
-	    border-radius: 2px;
+	    background: #191919 !important;
+	    border-radius: 0px!important;
 	    font-size: 16px;
 	    padding: 0.6em 1.8em;
 	    display: inline-block;
 	    font-weight: bold;
 	    margin-left: 1.5em;
-	    text-transform: uppercase; 
+	    text-transform: uppercase;
 
 	    &:hover{
-	    	color:#676666;
-	    	color: white; 
+	    	color:#191919;
+	    	background: #fff!important;
 	    }
 	}
 
