--- a/sass/module/_site-header.scss
+++ b/sass/module/_site-header.scss
@@ -54,7 +54,7 @@ $header-text-color: black;
 
    		& img{
    			max-height: 45px;
-   			min-width: 140px;
+   			/*min-width: 140px;*/
    		}
 
     }
@@ -75,7 +75,7 @@ $header-text-color: black;
 
 		& .dropdown-menu li a{
 			line-height: 40px;
-		}	
+		}
 
 		& .dropdown-menu li button{
 			display: block;
