--- a/sass/module/_body.scss
+++ b/sass/module/_body.scss
@@ -12,7 +12,7 @@
 	    top: 0;
 	    transition: 0.3s;
 	    overflow-y: auto;
-	    background: #4B4B4B;
+	    background: #191919;
 
 	    &--active{
 	    	transform: translateX(0%);
