--- a/sass/module/_btn.scss
+++ b/sass/module/_btn.scss
@@ -4,35 +4,35 @@
 	padding: 15px;
 	color:black;
 	text-align: center;
-	border: solid 3px white; 
+	border: solid 3px white;
 
-	-webkit-transition: all 0.7s ease-out;
-    -moz-transition: all 0.7s ease-out;
-    -ms-transition: all 0.7s ease-out;
-    -o-transition: all 0.7s ease-out;
-    transition: all 0.7s ease-out;
+	-webkit-transition: all 0.3s cubic-bezier(.17,1.11,.89,1);
+    -moz-transition: all 0.3s cubic-bezier(.17,1.11,.89,1);
+    -ms-transition: all 0.3s cubic-bezier(.17,1.11,.89,1);
+    -o-transition: all 0.3s cubic-bezier(.17,1.11,.89,1);
+    transition: all 0.3s cubic-bezier(.17,1.11,.89,1);
 
 	&:hover{
 		color:white;
 		background-color: black;
-		border: solid 3px black; 
+		border: solid 3px black;
 	}
 
 	&--gv-red{
 		background-color: #ec3f35;
-		border: solid 3px #ec3f35; 
+		border: solid 3px #ec3f35;
     	color: white;
     	padding: 15px 90px;
     	margin-top: 11px;
 		font-weight:bold;
 		text-transform: uppercase;
 		font-size: 1em;
-		border-radius:0px; 
+		border-radius:0px;
 
 		&:hover{
 			color:black;
 			background-color: white;
-			border: solid 3px white; 
+			border: solid 3px white;
 		}
 	}
 
@@ -45,7 +45,7 @@
 		text-transform: uppercase;
 		font-size: 1em;
 		text-align: center;
-		border: solid 3px black; 
+		border: solid 3px black;
 
 
 		&:hover{
